--- a/app/src/main/res/layout/activity_post_detail.xml
+++ b/app/src/main/res/layout/activity_post_detail.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F0F0F0"
+    android:fitsSystemWindows="true"
     tools:context=".PostDetailActivity">
 
     <androidx.appcompat.widget.Toolbar
