--- a/app/src/main/res/layout/fragment_chatbot.xml
+++ b/app/src/main/res/layout/fragment_chatbot.xml
@@ -13,7 +13,7 @@
         android:id="@+id/tv_greeting"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="챗봇"
+        android:text="@string/chatbot"
         android:fontFamily="@font/pretendard_gov_semibold"
         android:textSize="20sp"
         android:textColor="#010101"
@@ -69,7 +69,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="메시지를 입력하세요..."
+            android:hint="@string/message_input_hint"
             android:inputType="textMultiLine"
             android:maxLines="4"
             android:background="@android:color/transparent"
