--- a/app/src/main/res/layout/list_item_comment.xml
+++ b/app/src/main/res/layout/list_item_comment.xml
@@ -42,7 +42,7 @@
             android:id="@+id/tv_edit_comment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="수정"
+            android:text="@string/edit"
             android:textColor="@color/purple_500"
             android:textSize="12sp"
             android:layout_marginEnd="8dp"
@@ -53,7 +53,7 @@
             android:id="@+id/tv_delete_comment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="삭제"
+            android:text="@string/delete"
             android:textColor="@android:color/holo_red_dark"
             android:textSize="12sp"
             android:clickable="true"
