--- a/app/src/main/res/layout/fragment_chatbot.xml
+++ b/app/src/main/res/layout/fragment_chatbot.xml
@@ -13,12 +13,12 @@
         android:id="@+id/tv_start_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="대화를 시작해보세요!"
+        android:text="@string/chatbot_greeting"
         android:textSize="36sp"
         android:textColor="#808080"
         android:gravity="center"
         app:layout_constraintTop_toBottomOf="@id/tv_greeting"
-        app:layout_constraintBottom_toTopOf="@+id/view_input_divider"
+        app:layout_constraintBottom_toTopOf="@+id/layout_input"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="32dp"
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:text="@string/chatbot"
         android:fontFamily="@font/pretendard_gov_semibold"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:textColor="#010101"
         android:padding="16dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -54,19 +54,10 @@
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toBottomOf="@id/tv_greeting"
-        app:layout_constraintBottom_toTopOf="@+id/view_input_divider"
+        app:layout_constraintBottom_toTopOf="@+id/layout_input"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/item_chat_message" />
-
-    <View
-        android:id="@+id/view_input_divider"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"
-        app:layout_constraintBottom_toTopOf="@+id/layout_input"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <LinearLayout
         android:id="@+id/layout_input"
@@ -74,7 +65,10 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:padding="8dp"
+        android:background="@drawable/rounded_edittext_background_chatbot"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -88,7 +82,10 @@
             android:inputType="textMultiLine"
             android:maxLines="4"
             android:background="@android:color/transparent"
-            android:padding="12dp" />
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"/>
 
         <ImageButton
             android:id="@+id/button_send"
