--- a/app/src/main/res/layout/item_chat_message.xml
+++ b/app/src/main/res/layout/item_chat_message.xml
@@ -3,8 +3,15 @@
     android:id="@+id/message_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="8dp">
+
+    <ImageView
+        android:id="@+id/iv_profile"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_gemini"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/textView_message"
